Add donneur d'ordre field to Document; update signature handling and related DTOs